# myAgent

./: .env.example  .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  run_all.py
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  graph.py  nodes.py
app/llm/: __init__.py  openai_router.py  vertex_ai.py
app/models/: __init__.py  parameters.py  responses.py  state.py
app/session/: __init__.py  manager.py
app/tools/: __init__.py  cohort_client.py  funnel_client.py
mock_api/: README.md  mock_server.py
tests/: test_components.py
